--- a/src/style/Components.css
+++ b/src/style/Components.css
@@ -7,6 +7,10 @@
     right:0;
     bottom:0;
   }
+  header, section, footer{
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+  }
   /* sections */
   section{
     opacity: 0;
@@ -17,46 +21,31 @@
     opacity: 1;
     transform: translateY(0);
   }
-  /* Header.tsx */
+  .bg-transparent{
+    background:transparent !important
+  }
   .bg-primary{
     background: var(--bc-navbar-primary) !important;
-    /* background: linear-gradient(to bottom left, var(--bc-navbar-primary)0%, var(--bc-navbar-secondary) 100%); */
   }
   .bg-secondary{
     background: var(--bc-navbar-secondary) !important;
-    /* background: linear-gradient(to bottom left, var(--bc-navbar-secondary)0%, var(--bc-navbar-primary) 100%); */
   }
+  /* Header.tsx */
   header.hero {
       position: relative;
-      /* background: url("../images/hero-bg.jpg" ) no-repeat center center ; */
       background-size: cover;
-      padding-top: 4rem;
-      padding-bottom: 4rem;
     }
     header.hero h1, header.hero .h1 {
       font-size: 4rem;
     }
     @media (min-width: 768px) {
-      header.hero {
-        padding-top: 6rem;
-        padding-bottom: 6rem;
-      }
       header.hero h1, header.hero .h1 {
         font-size: 5rem;
       }
     }
     
-  /* About.tsx */
-  .about {
-      padding-top: 7rem;
-      padding-bottom: 7rem;
-  }
   .about .about-item {
       max-width: 20rem;
-  }
-  .services{
-    padding-top: 7rem;
-    padding-bottom: 7rem;
   }
   .services .table tr td .fa-square-check{
     color:green !important
@@ -64,3 +53,33 @@
   .services .table tr td .fa-square-xmark{
     color:red !important
   }
+  /* Contact.tsx */
+.contact {
+  position: relative;
+  background-color: #343a40;
+  background-size: cover;
+}
+  .contact form{
+    background-color: white;
+    border-radius: 4rem;
+    padding:4rem;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.2) ;
+  }
+.modal-container{
+  position: fixed;
+  background: white;
+  border-radius: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  color: black;
+  z-index: 1000;
+}
+
+@media (max-width: 768px) {
+  .contact-row{
+    flex-direction: column;
+    margin-bottom:0px !important
+  }
+}
