--- a/src/style/Components.css
+++ b/src/style/Components.css
@@ -38,22 +38,81 @@
     header.hero h1, header.hero .h1 {
       font-size: 4rem;
     }
-    @media (min-width: 768px) {
+    @media (max-width: 768px) {
       header.hero h1, header.hero .h1 {
-        font-size: 5rem;
+        font-size: 2rem;
       }
     }
-    
   .about .about-item {
       max-width: 20rem;
   }
-  .services .table tr td .fa-square-check{
-    color:green !important
-  }
-  .services .table tr td .fa-square-xmark{
+/* services */
+.services-table{
+  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+}
+.services .table tr td .fa-square-check{
+   color:green !important
+}
+.services .table tr td .fa-square-xmark{
     color:red !important
+}
+@media (max-width: 768px) {
+  .services .table th{
+    font-size: xx-small;
   }
-  /* Contact.tsx */
+}
+
+/* Showcase */
+.showcase-item-container{
+  grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  margin: 10px 10px 16px;
+}
+/* @media (max-width: 1199.98px) {
+  .showcase-item-container{    
+    grid-template-columns: repeat(3, 1fr) !important;
+  }
+} */
+@media (max-width: 991.98px) {
+  .showcase-item-container{    
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+}
+@media (max-width: 767.98px) {
+  .showcase-item-container{    
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+}
+
+.showcase-item-card{
+  cursor: pointer;
+  transition: scale 0.2s ease-in;
+  padding:10px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+  justify-self: center;
+}
+  .showcase-item-card:hover{
+    scale: 0.99;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2)
+  }
+  .showcase-item-card a{
+    color:inherit;
+    text-decoration: none;
+  }
+  .showcase-item-card .content{
+    width:16rem;
+  }
+  .showcase-item-card .content .content-image{
+    width:inherit;
+    height:12rem;
+    border-radius: var(--bs-card-border-radius)
+  }
+@media (min-width: 768px) {
+  .showcase .showcase-text {
+    padding: 7rem;
+  }
+}
+/* Contact.tsx */
 .contact {
   position: relative;
   background-color: #343a40;
@@ -63,7 +122,7 @@
     background-color: white;
     border-radius: 4rem;
     padding:4rem;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.2) ;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.2) ;
   }
 .modal-container{
   position: fixed;
@@ -82,4 +141,9 @@
     flex-direction: column;
     margin-bottom:0px !important
   }
+}
+
+.footer{
+  padding-bottom:2rem;
+  padding-top:4rem
 }
