--- a/src/style/Components.css
+++ b/src/style/Components.css
@@ -1,130 +1,160 @@
-.opacity-container{
-    position: fixed;
-    background: rgba(0,0,0,0.4);
-    z-index: 999;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-  }
-  header, section, footer{
-    padding-top: 7rem;
-    padding-bottom: 7rem;
-  }
-  /* sections */
-  section{
-    opacity: 0;
-    transform: translateY(20px); /* Adjust as needed */
-    transition: opacity 0.4s ease-in, transform 0.4s ease-in;
-  }
-  section.visited{
-    opacity: 1;
-    transform: translateY(0);
-  }
-  .bg-transparent{
-    background:transparent !important
-  }
-  .bg-primary{
-    background: var(--bc-navbar-primary) !important;
-  }
-  .bg-secondary{
-    background: var(--bc-navbar-secondary) !important;
-  }
-  /* Header.tsx */
-  header.hero {
-      position: relative;
-      background-size: cover;
-    }
-    header.hero h1, header.hero .h1 {
-      font-size: 4rem;
-    }
-    @media (max-width: 768px) {
-      header.hero h1, header.hero .h1 {
-        font-size: 2rem;
-      }
-    }
-  .about .about-item {
-      max-width: 20rem;
-  }
-/* services */
-.services-table{
-  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+.opacity-container {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
-.services .table tr td .fa-square-check{
-   color:green !important
+
+header,
+section,
+footer {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
 }
-.services .table tr td .fa-square-xmark{
-    color:red !important
+
+/* sections */
+section {
+  opacity: 0;
+  /* Adjust as needed */
+  transition: opacity 0.4s ease-in, transform 0.4s ease-in;
 }
+
+section.visited {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.bg-transparent {
+  background: transparent !important;
+}
+
+.bg-primary {
+  background: var(--bc-primary) !important;
+}
+
+.bg-secondary {
+  background: var(--bc-secondary) !important;
+}
+
+/* Header.tsx */
+header.hero {
+  position: relative;
+  background-size: cover;
+}
+
+header.hero h1,
+header.hero .h1 {
+  font-size: 5rem;
+}
+
+@media (max-width: 1200px) {
+
+  header.hero h1,
+  header.hero .h1 {
+    font-size: 4rem;
+  }
+}
+
 @media (max-width: 768px) {
-  .services .table th{
+
+  header.hero h1,
+  header.hero .h1 {
+    font-size: 3rem;
+  }
+}
+
+.about-item-image {
+  width: 20rem;
+  height: 20rem
+}
+
+/* services */
+.services-table {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.services .table tr td .fa-square-check {
+  color: green !important;
+}
+
+.services .table tr td .fa-square-xmark {
+  color: red !important;
+}
+
+@media (max-width: 768px) {
+  .services .table th {
     font-size: xx-small;
   }
 }
 
 /* Showcase */
-.showcase-item-container{
+.showcase-item-container {
   grid-template-columns: repeat(3, 1fr);
   display: grid;
   margin: 10px 10px 16px;
-}
-/* @media (max-width: 1199.98px) {
-  .showcase-item-container{    
-    grid-template-columns: repeat(3, 1fr) !important;
-  }
-} */
-@media (max-width: 991.98px) {
-  .showcase-item-container{    
+
+  @media (max-width: 991.98px) {
     grid-template-columns: repeat(2, 1fr) !important;
   }
-}
-@media (max-width: 767.98px) {
-  .showcase-item-container{    
+
+  @media (max-width: 767.98px) {
     grid-template-columns: repeat(1, 1fr) !important;
   }
 }
 
-.showcase-item-card{
+.showcase-item-card {
   cursor: pointer;
   transition: scale 0.2s ease-in;
-  padding:10px;
-  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+  padding: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   justify-self: center;
+  background-color: var(--bc-primary);
 }
-  .showcase-item-card:hover{
-    scale: 0.99;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2)
-  }
-  .showcase-item-card a{
-    color:inherit;
-    text-decoration: none;
-  }
-  .showcase-item-card .content{
-    width:16rem;
-  }
-  .showcase-item-card .content .content-image{
-    width:inherit;
-    height:12rem;
-    border-radius: var(--bs-card-border-radius)
-  }
+
+.showcase-item-card:hover {
+  scale: 0.98;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.showcase-item-card a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.showcase-item-card .content {
+  width: 16rem;
+}
+
+.showcase-item-card .content .content-image {
+  width: inherit;
+  height: 12rem;
+  border-radius: var(--bs-card-border-radius);
+}
+
 @media (min-width: 768px) {
   .showcase .showcase-text {
     padding: 7rem;
   }
 }
+
 /* Contact.tsx */
 .contact {
   position: relative;
   background-color: #343a40;
   background-size: cover;
 }
-  .contact form{
-    background-color: white;
-    border-radius: 4rem;
-    padding:4rem;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.2) ;
-  }
-.modal-container{
+
+.contact form {
+  background-color: white;
+  border-radius: 4rem;
+  padding: 4rem;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.modal-container {
   position: fixed;
   background: white;
   border-radius: 10px;
@@ -137,13 +167,13 @@
 }
 
 @media (max-width: 768px) {
-  .contact-row{
+  .contact-row {
     flex-direction: column;
-    margin-bottom:0px !important
+    margin-bottom: 0px !important;
   }
 }
 
-.footer{
-  padding-bottom:2rem;
-  padding-top:4rem
+.footer {
+  padding-bottom: 2rem;
+  padding-top: 4rem;
 }
