--- a/src/style/Navigation.css
+++ b/src/style/Navigation.css
@@ -1,26 +1,32 @@
-:root{
-    --bc-navbar-primary: #efefef;/* --bc-navbar-primary: rgb(126,212,245) ; */
-    --bc-navbar-secondary: #ffffff;
-    --bc-navbar-shadow: rgb(126,212,245, 50%)
-  }
-  /*NavBar.tsx*/ 
-  .navbar{
-    transition: transform 0.1s ease-in-out;
-    padding:0;
-    box-shadow:  0px 2px 10px rgba(0,0,0,0.2);
-  }
-    .navbar:hover{
-      transform: translateY(0);
-    }
-    .navbar.show {
-      transform: translateY(0);
-    } 
-  .navbar .container{
-    width:100%;
-    margin: 0;
-  }
-  .navigation{
-    font-size: large;
-    font-weight: normal;
-  }
-  
+/* :root{
+    --bc-navbar-primary: #efefef;
+--bc-navbar-secondary: #ffffff;
+--bc-navbar-shadow: rgb(126, 212, 245, 50%)
+}
+
+*/
+
+/*NavBar.tsx*/
+.navbar {
+  transition: transform 0.1s ease-in-out;
+  padding: 0;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.navbar:hover {
+  transform: translateY(0);
+}
+
+.navbar.show {
+  transform: translateY(0);
+}
+
+.navbar .container {
+  width: 100%;
+  margin: 0;
+}
+
+.navigation {
+  font-size: large;
+  font-weight: normal;
+}
